Improved the Rakefile

--- a/TimerBlink/Rakefile
+++ b/TimerBlink/Rakefile
@@ -1,9 +1,14 @@
+CC = "msp430-gcc"
+
 CFLAGS = "-mmcu=msp430x2011 -c -Wall -O0 "
 LFLAGS = "-mmcu=msp430x2011 "
 
 OBJ_DIR = 'obj'
 directory OBJ_DIR
 
+INCLUDES = FileList['src/**/*.h']
+
+CFLAGS << INCLUDES.join(' -I').insert(0, '-I') unless INCLUDES.empty?
 
 SRC_FILES = FileList['src/**/*.c']
 OBJ_FILES = SRC_FILES.collect { |src| File.join(OBJ_DIR, File.basename(src).ext('obj'))}
@@ -18,13 +23,13 @@ task :link => :compile do
   puts "Linking binary "
   `msp430-gcc #{LFLAGS} #{OBJ_FILES.join(" ")} -o #{BIN_OUT}`
   abort "Abort: Error al linkear" unless $?.to_i == 0
-  puts "Done"
+  puts "Binary generated succesfully"
 end
 
 task :compile => OBJ_DIR do
   SRC_FILES.each do |source|
     puts "Compiling #{File.basename(source)}"
-    `msp430-gcc #{CFLAGS} #{source} -o #{File.join(OBJ_DIR, File.basename(source).ext('obj'))}`
+		`#{CC} #{CFLAGS} #{source} -o #{File.join(OBJ_DIR, File.basename(source).ext('obj'))}`
     abort "Abort: Error al compilar #{File.basename(source)}" unless $?.to_i == 0
   end
 end
