--- a/TimerBlink/Rakefile
+++ b/TimerBlink/Rakefile
@@ -7,27 +7,40 @@
 # Released under the Beerware License
 # http://en.wikipedia.org/wiki/Beerware
 
+#Setting the compiler
 CC = "msp430-gcc"
 
-CFLAGS = "-mmcu=msp430x2011 -c -Wall -Os "
-LFLAGS = "-mmcu=msp430x2011 "
+MMCU = "msp430x2011"
 
+#Setting the FLAGS for compile and link time. If using a different MSP430 be sure to change
+#the mmcu option
+CFLAGS = "-mmcu=#{MMCU} -c -Wall -Os "
+LFLAGS = "-mmcu=#{MMCU} "
+
+#Defining the folder where the compiled objects will reside
 OBJ_DIR = 'obj'
 directory OBJ_DIR
 
+#Including all the subfolders inside src to be able to use '#include <path/in/src/header.h>'
 INCLUDES = FileList['src/**/*.h']
-
 CFLAGS << INCLUDES.join(' -I').insert(0, '-I') unless INCLUDES.empty?
 
+#Include all source files inside src
+#Remember, this is for a single app, so there is no purpose in placing source files of another project
+#However, this would be the place to include files from other projects, or libraries outside this project
 SRC_FILES = FileList['src/**/*.c']
 OBJ_FILES = SRC_FILES.collect { |src| File.join(OBJ_DIR, File.basename(src).ext('obj'))}
 
+#The name of the output binary
 BIN_OUT = 'bin.elf'
 
+#
 task :build => :link
 
+#This makes calling 'rake' without task to create the binary
 task :default => :link
 
+#Task for linking the compiled object
 task :link => :compile do
   puts "Linking binary "
   `#{CC} #{LFLAGS} #{OBJ_FILES.join(" ")} -o #{BIN_OUT}`
@@ -35,6 +48,7 @@ task :link => :compile do
   puts "Binary generated succesfully"
 end
 
+#Task for compiling all source files
 task :compile => OBJ_DIR do
 	`rm -rf #{File.join(OBJ_DIR, '*')}/* #{BIN_OUT}`
   SRC_FILES.each do |source|
@@ -44,6 +58,8 @@ task :compile => OBJ_DIR do
   end
 end
 
+#Task that should install the binary in the Launchpad, but the way mspdebug works doesn't make it
+#possible yet
 task :install do
   abort "Abort: #{BIN_OUT} not found. Run 'rake build' first" unless File.exists?(BIN_OUT)
   puts "Run 'mspdebug rf2500'.\nInside, execute the following commands:\n\terase\n\tprog #{BIN_OUT}\n\trun"
